// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorWebsitesAction renders only a url 1`] = `
<UserActionWrapper>
  <EventTracker
    eventAction="Link"
    eventCategory="Author detail"
    eventId="Author websites"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="www.descriptionless.com/url"
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Author websites"
      >
        <ForwardRef(LinkOutlined) />
      </Tooltip>
    </LinkWithTargetBlank>
    ;
  </EventTracker>
</UserActionWrapper>
`;

exports[`AuthorWebsitesAction renders only blog 1`] = `
<UserActionWrapper>
  <EventTracker
    eventAction="Link"
    eventCategory="Author detail"
    eventId="Author websites"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="https://author.wordpress.com"
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Author websites"
      >
        <ForwardRef(LinkOutlined) />
      </Tooltip>
    </LinkWithTargetBlank>
    ;
  </EventTracker>
</UserActionWrapper>
`;

exports[`AuthorWebsitesAction renders with a blog and urls in a dropdown 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <ForwardRef
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title="Author websites"
        >
          <ForwardRef(LinkOutlined) />
        </ForwardRef>
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="https://author.wordpress.com"
    >
      <EventTracker
        eventAction="Link"
        eventCategory="Author detail"
        eventId="Author websites"
        eventPropName="onClick"
        extractEventArgsToForward={null}
      >
        <LinkWithTargetBlank
          as="a"
          href="https://author.wordpress.com"
        >
          Blog
        </LinkWithTargetBlank>
      </EventTracker>
    </MenuItem>
    <MenuItem
      key="https://www.whatever.com/author"
    >
      <EventTracker
        eventAction="Link"
        eventCategory="Author detail"
        eventId="Author websites"
        eventPropName="onClick"
        extractEventArgsToForward={null}
      >
        <LinkWithTargetBlank
          as="a"
          href="https://www.whatever.com/author"
        >
          whatever.com/author
        </LinkWithTargetBlank>
      </EventTracker>
    </MenuItem>
    <MenuItem
      key="www.descriptionless.com/url"
    >
      <EventTracker
        eventAction="Link"
        eventCategory="Author detail"
        eventId="Author websites"
        eventPropName="onClick"
        extractEventArgsToForward={null}
      >
        <LinkWithTargetBlank
          as="a"
          href="www.descriptionless.com/url"
        >
          descriptionless.com/url
        </LinkWithTargetBlank>
      </EventTracker>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;
